syntax = "proto3";

package proto.v1;
option go_package = "github.com/marcusbello/paydistro/proto/v1";

message VerifyInfoReq {
  string number = 1;
}

message VerifyInfoResp {
  string full_name = 1;
  bool status = 2;
}

service AEDCService {
  rpc VerifyInfo(VerifyInfoReq) returns (VerifyInfoResp) {};
}